--- a/src/app/products/list-product/list-product.component.html
+++ b/src/app/products/list-product/list-product.component.html
@@ -1,5 +1,6 @@
 
-<h2>Listes des produits</h2>
+<h1 *ngIf="isHomePage">Bienvenue sur l'accueil</h1>
+<h1 *ngIf="!isHomePage">Liste des produits</h1>
 <table mat-table [dataSource]="products" class="mat-elevation-z8">
   <!-- Nom -->
   <ng-container matColumnDef="name">
@@ -17,6 +18,15 @@
   <ng-container matColumnDef="description">
     <th mat-header-cell *matHeaderCellDef> Description </th>
     <td mat-cell *matCellDef="let product"> {{ product.description }} </td>
+  </ng-container>
+
+  <!-- Actions -->
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Actions</th>
+    <td mat-cell *matCellDef="let produit">
+      <button mat-button (click)="onEdit(produit.id)">Modifier</button>
+      <button mat-button color="warn" (click)="onDelete(produit.id)">Supprimer</button>
+    </td>
   </ng-container>
 
   <!-- Ligne d'en-tête -->
